# image_similarity

./: Untitled.ipynb  Untitled1.ipynb  config.yaml  extensions.py  image_processor.py  pyproject.toml
flask_app/: __init__.py  qdrant_operations.py
flask_app/backflow/: q_client.py  qdrant_operations.py
